--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
       const response = await result.response;
       const text = response.text();
       console.log(text);
-      console.log(text.split('|')[1]);
-      console.log(text.split('|')[0]);
-      return { "marks": text.split('|')[1], "eval": text.split('|')[0]};
+      return text;
     });
   </script>
 </body>
